# tftpd

./: .gitignore  CMakeLists.txt  README.md
src/: libs.vcxproj  readme.txt  tftpd32.vcxproj  tftpd32_gui.vcxproj  tftpd32_svc.vcxproj
src/_common/: bootpd_util.h  custom.h  headers.h  setinifilename.c  settings.h  tftp_struct.h
src/_gui/: about.c  gui_bootpd.c  gui_bootpd_settings.c  gui_dialog.c  gui_functions.h  gui_gauges.c  gui_log.c  gui_main.c  gui_settings.c  gui_tftp_dir.c  gui_tftpd.c  squelette.c  tftp_cli.c  tftp_ip.c  tftpd32.h  tftpd32.rc
src/_libs/GUI/: Cmsgbox.c  centerchild.h  listview.c  listview.h  window.c
src/_libs/event_log/: eventlog.c
src/_libs/linked_list/: linked_list.c
src/_libs/mini_tcp4u/: mini_tcp4u.c  tcp4u.h  tcp4u_exchg.c
src/_libs/ping_api/: ping_api.c
src/_libs/registry/: registry.c
src/_libs/scandir/: scandir.c
src/_main/: GUI main.c  firewall.c  main.c
src/_services/: bootpd.c  bootpd_console.c  bootpd_functions.h  bootpd_util.c  dhcp.h  dns.c  ip_thread.c  ip_util.c  registry_thread.c  service_main.c  settings.c  sntpd.c  start_threads.c  syslogd.c  tftpd32.rc  tftpd_main.c  tftpd_thread.c  to_console.c
tests/: test_tftpd64.py  tftp_test_utils.py
